<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 앱 이름, 버튼 텍스트 등 모든 문자열을 여기서 관리 -->

    <string name="app_name">LifeLogU</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have an account?</string>

    <string name="enter_name">Name</string>
    <string name="enter_birthday">Birthday</string>
    <string name="enter_school">School</string>
    <string name="enter_height">Height (cm)</string>
    <string name="enter_weight">Weight (kg)</string>
    <string name="timetable_label">Time Table</string>
    <string name="continue_text">Continue</string>

    <!-- ImageView의 contentDescription(접근성) 용 텍스트 -->
    <string name="app_icon_description">App Icon</string>

    <string name="agreement_title">Sensitive Information Collection Agreement</string>
    <string name="agreement_message">
        This app works by collecting your location information,\n sound information (decibels and waveforms), sending it to a server,\n and training it into a model that fits you.\n In order to continue using this app, you must agree to our collection\n of this sensitive information.\n Do you agree to the above?
    </string>

    <string name="optimization_title">About the Optimization Period (3 days)</string>
    <string name="optimization_message">
        The app will go through a 3-day optimization period to better predict your lifestyle and give you thorough feedback.\n During this period, you will be periodically asked simple questions about your health, and the more quickly and accurately you answer them, the more accurate the app will be.\n After the 3-day optimization period, there will be sessions twice a day where you can manually fix errors before receiving feedback, and the server will continue to optimize for you.\n Do you agree to actively participate in the optimization period survey?
    </string>

    <string name="agree_checkbox">Yes, I agree.</string>
    <string name="preview_timetable">Preview Timetable</string>
    <string name="ok_button">OK</string>
    <string name="daily_report">Your Daily Report</string>
    <string name="ok">OK</string>
    <string name="preview_title">Check if your log is correct</string>
    <string name="before_report">Before the report</string>
    <string name="your_daily_report">Your Daily Report</string>


    <string name="Sleep_txt1">Your sleep time is far too short! \nThis poses a risk to your health. \nOut of the recommended 7 hours of sleep, \n you didn’t even get 4 hours.</string>
    <string name="Sleep_txt2">Your sleep time is still little short! \n Out of the recommended 7 hours of sleep, \n you slept only 4~6 hours. \n for your health, sleep more.</string>
    <string name="Sleep_txt3">Your sleep time is sufficient! \nMaintaining this sleep time, \nYou can be healthy.</string>

    <string name="Study_txt1">You studied too little. \nYou didn\'t meet the college student average of 5 hours. \nPlease study more according to your goal.</string>
    <string name="Study_txt2">You\'re almost there! \nJust a bit more studying and you\'ll reach your target. \nKeep going!</string>
    <string name="Study_txt3">Great job! \nYou\'ve studied enough to meet both your goal and the college student average.</string>

    <string name="Class_txt1">You missed many classes during the scheduled times. \nPlease focus on your studies and attend all your classes.</string>
    <string name="Class_txt2">It seems you missed a small portion of your classes. \nMake sure to attend every class.</string>
    <string name="Class_txt3">Well done! \nYou attended all your classes diligently.</string>

    <string name="Work_txt1">You barely exercised today. \nTo meet the recommended daily amount for adults, \nyou need at least one more hour. \nPlease exercise more for your health.</string>
    <string name="Work_txt2">You\'re slightly below the recommended amount of exercise. \nJust a bit more to go! \nTry to reach the daily goal for your health.</string>
    <string name="Work_txt3">Great job! \nYou\'ve completed the full recommended amount of exercise for adults.</string>


</resources>